--- a/index.html
+++ b/index.html
@@ -11,12 +11,31 @@
 <body>
     <header>
         <nav class="container">
-            <div>
+            <div class="nav-box-1">
                 <img src="assets/img/logo.png" alt="">
-            </div>
-            <div>
+            </div>                
+            <div class="nav-box-2">
                 <a href=""><i class="fa-solid fa-bars"></i></a>
-            </div>
+                <div class="ul-list">
+                    <ul>
+                        <li>
+                            <a href="#">Planning</a>
+                        </li>
+                        <li>
+                            <a href="#">Testimonials</a>
+                        </li>
+                        <li>
+                            <a href="#">Features</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" id="btn-white">Get Started</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>            
         </nav>
     </header>
 
@@ -24,16 +43,20 @@
         <!-- section demo applications -->
         <div class="container">
             <section id="demo-applications">
-                <div class="card-blue">
-                    <h3>Get a demo Applications</h3>
-                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat maxime ratione ullam id quod voluptatem illum vel aut, sed atque totam in dolores soluta dicta qui quae. Modi, commodi provident!</span>
-                    <div class="center">
-                        <div class="btn-blue">
-                            <a href="#"><i class="fa-brands fa-apple"></i> App Store</a>
+                <div id="double-card" class="card-blue flex wrap">
+                    <div class="width-100 ta-start">
+                        <h3>Get a demo Applications</h3>
+                        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat maxime ratione ullam id quod voluptatem illum vel aut, sed atque totam in dolores soluta dicta qui quae. Modi, commodi provident!</span>
+                        <div class="center">
+                            <div class="btn-blue">
+                                <a href="#"><i class="fa-brands fa-apple"></i> App Store</a>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <img src="assets/img/phone.png" alt="">
+                    <div class="width-100">    
+                        <div>
+                            <img src="assets/img/phone.png" alt="">
+                        </div>
                     </div>
                 </div>
 
@@ -48,7 +71,7 @@
                     </div>                                            
                 </div>
 
-                <div class="card-blue padding-bottom">
+                <div class="card-blue padding-bottom margin-bottom">
                     <div class="small-fa">
                         <i class="fa-solid fa-compass-drafting"></i>
                     </div>
@@ -58,7 +81,7 @@
                     </div>                                            
                 </div>
 
-                <div class="card-blue padding-bottom">
+                <div class="card-blue padding-bottom margin-bottom">
                     <div class="small-fa">
                         <i class="fa-solid fa-laptop-code"></i>
                     </div>
@@ -83,7 +106,7 @@
 
         <!-- section strategic-planning -->        
         <section id="strategic-planning">
-            <div class="container">
+            <div class="container flex wrap justify-space-around">
                 <div class="no-bg-card">
                     <div>
                         <img src="assets/img/planning1.png" alt="">
@@ -91,19 +114,81 @@
                     <h2>Strategic Planning</h2>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ipsam fugiat doloremque eum repudiandae voluptates</span>
                 </div>
+                
                 <div class="white-card">
                     <div>
                         <img src="assets/img/planning2.png" alt="">
                     </div>
                     <h3>App Development</h3>
-                    <span>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.
-                    </span>
+                    <span class="block italic">Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.
+                    </span>                    
                     <div class="purple-btn">
                         <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
-                    </div>
+                    </div>                        
                 </div>    
+            </div>                
+        </section>
+
+        <!-- section testimonials -->
+        <section id="testimonials">
+            <div class="container">
+                <div>TESTIMONIALS</div>
+                <h2>We are commmitted expert partners</h2>
+                <div class="line-height margin-bottom-2">
+                    We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.
+                </div>
+                <div class="testimonials-card-section">
+
+                    <!-- inizio card -->
+                    <div class="testimonials-card">
+                        <div class="card-box-1">
+                            <img src="assets/img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="card-box-2">
+                            <blockquote>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id cum fugiat cupiditate alias vero quisquam voluptates facilis dolorum
+                            </blockquote>
+                            <h3>NAT REYNOLDS</h3>
+                        </div>    
+                    </div>
+
+                    <div class="testimonials-card">
+                        <div class="card-box-1">
+                            <img src="assets/img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="card-box-2">
+                            <blockquote>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id cum fugiat cupiditate alias vero quisquam voluptates facilis dolorum
+                            </blockquote>
+                            <h3>CELIA ALMEDA</h3>
+                        </div>    
+                    </div>
+
+                    <div class="testimonials-card">
+                        <div class="card-box-1">
+                            <img src="assets/img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="card-box-2">
+                            <blockquote>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id cum fugiat cupiditate alias vero quisquam voluptates facilis dolorum
+                            </blockquote>
+                            <h3>BOB ROBERTS</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
-                
+        </section>
+
+        <!-- section benefits -->
+        <section id="benefits">   
+            <div class="container">
+                <h2>benefits of working with us</h2>
+                <div class="benefits-card-section">
+                    <div>
+
+                    </div>
+                </div>
+            </div>
         </section>
 
 
