--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>                                            
                 </div>
 
-                <div class="card-blue padding-bottom margin-bottom">
+                <div class="card-blue padding-bottom">
                     <div class="small-fa">
                         <i class="fa-solid fa-compass-drafting"></i>
                     </div>
@@ -81,7 +81,7 @@
                     </div>                                            
                 </div>
 
-                <div class="card-blue padding-bottom margin-bottom">
+                <div class="card-blue padding-bottom">
                     <div class="small-fa">
                         <i class="fa-solid fa-laptop-code"></i>
                     </div>
@@ -91,7 +91,7 @@
                     </div>                                            
                 </div>
 
-                <div class="card-blue padding-bottom margin-bottom">
+                <div class="card-blue padding-bottom">
                     <div class="small-fa">
                         <i class="fa-solid fa-bullhorn"></i>
                     </div>
@@ -182,12 +182,85 @@
         <!-- section benefits -->
         <section id="benefits">   
             <div class="container">
-                <h2>benefits of working with us</h2>
+                <h2 class="title-section-white">Benefits of working with us</h2>
                 <div class="benefits-card-section">
-                    <div>
+                    <div class="white-card-2">
+                        <h2>01</h2>
+                        <h3>High Quality</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
+                    </div>
 
+                    <div class="white-card-2">
+                        <h2>02</h2>
+                        <h3>Creative Team</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
+                    </div>
+
+                    <div class="white-card-2">
+                        <h2>03</h2>
+                        <h3>Amazing Results</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
+                    </div>
+
+                    <div class="white-card-2">
+                        <h2>04</h2>
+                        <h3>Best Pricing</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
+                    </div>
+
+                    <div class="white-card-2">
+                        <h2>05</h2>
+                        <h3>Innovations</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
+                    </div>
+
+                    <div class="white-card-2">
+                        <h2>06</h2>
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum quod dolore eius recusandae sed, in quibusdam est repellat eligendi adipisci impedit volupt</p>
+                        <a href="">more</a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- section About us -->
+        <section id="about-us">
+            <div class="container flex wrap">
+                <div class="about-us-box-1">
+                    <h2 class="title-section-purple">About Us</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio nulla mollitia officia repellat facilis magnam totam velit quas impedit, voluptates neque tenetur, tempora nam, itaque exercitationem eveniet accusamus consequatur quia.</p><br>
+                    <p>ipsum dolor sit amet consectetur adipisicing elit. Quia odit eveniet vitae accusantium illum atque! Itaque saepe voluptatem cumque vitae exercitationem omnis? Illo quo delectus illum animi, reiciendis alias ab.</p>
+                </div>
+                <div class="about-us-box-2">
+                    <div id="quotes-img-about-us">                        
+                        <img src="assets/img/about.jpg" alt="">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>                    
+                    <h3>I help companies Lorem ipsum dolor sit amet consectetur adipisicing</h3>
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin"></i> Find me on linkedin
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- section it's free -->
+        <section id="its-free">
+            <div class="container">
+                <div>GET STARTED</div>
+                <h2 id="section-free-1-h2">Simple, Transparent Pricing</h2>
+                <h2 id="section-free-2-h2">It's Free!</h2>
+                <p>We're still in beta and we will be for awhile. As we add more <br> funcionality, we'll look into other plans with more controls.</p>
+                <a href="#">Get Started</a>
+                <span>Copyright 2021 Boolean</span>
+                <span>Classe XX</span>
+                <a href="#">Privacy Policy</a>
             </div>
         </section>
 
