--- a/index.html
+++ b/index.html
@@ -253,16 +253,29 @@
         <!-- section it's free -->
         <section id="its-free">
             <div class="container">
-                <div>GET STARTED</div>
+                <div class="grey-text">GET STARTED</div>
                 <h2 id="section-free-1-h2">Simple, Transparent Pricing</h2>
                 <h2 id="section-free-2-h2">It's Free!</h2>
                 <p>We're still in beta and we will be for awhile. As we add more <br> funcionality, we'll look into other plans with more controls.</p>
-                <a href="#">Get Started</a>
-                <span>Copyright 2021 Boolean</span>
-                <span>Classe XX</span>
-                <a href="#">Privacy Policy</a>
+                <div class="btn-white-big">
+                    <a href="#">Get Started</a>
+                </div>
+                <div class="block">                
+                    <span>Copyright 2021 Boolean</span>
+                    <span>&#8226; Classe XX</span>
+                    <a href="#">&#8226; Privacy Policy</a>
+                </div>    
             </div>
         </section>
+
+        <footer>
+            <div class="container">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Velit ut aliquam molestiae delectus eum ratione, aspernatur,</p>
+                <p>
+                   <a href="#">Lorem ipsum</a> lorem ipsum lorem ipsum <a href="#">Boolean Careers</a> 
+                </p>
+            </div>
+        </footer>
 
 
 
