--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
             </div>
         </section>
 
+        <!-- footer -->
         <footer>
             <div class="container">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Velit ut aliquam molestiae delectus eum ratione, aspernatur,</p>
@@ -275,11 +276,7 @@
                    <a href="#">Lorem ipsum</a> lorem ipsum lorem ipsum <a href="#">Boolean Careers</a> 
                 </p>
             </div>
-        </footer>
-
-
-
-        
+        </footer>        
     </main>
 </body>
 </html>
